# bam_stuff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  bam_markdup.cpp  bam_markdup_app.cpp  bam_markdup_app.h  bam_markdup_options.cpp  bam_markdup_options.h  version.h
